# fp-lab2

./: .zanuda  README.md  dune-project  labwork2.opam
.github/workflows/: main.yml  static.yml
_build/: log
lib/: dict.ml  dict.mli  dune  labwork2.mli
test/: dune  test_labwork2.ml
